parser/cool.output
Terminals unused in grammar

    ERROR


State 11 conflicts: 2 shift/reduce
State 17 conflicts: 2 shift/reduce
State 129 conflicts: 9 shift/reduce
State 141 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | error ';'

    7 feature_list: %empty
    8             | feature
    9             | feature_list feature

   10 feature: OBJECTID ':' TYPEID ';'
   11        | OBJECTID ':' TYPEID ASSIGN expression ';'
   12        | OBJECTID '(' formal_List ')' ':' TYPEID '{' expression '}' ';'
   13        | error ';'

   14 formal: OBJECTID ':' TYPEID

   15 formal_List: %empty
   16            | formal
   17            | formal_List ',' formal

   18 expression: BOOL_CONST
   19           | STR_CONST
   20           | INT_CONST
   21           | OBJECTID
   22           | '(' expression ')'
   23           | NOT expression
   24           | expression '=' expression
   25           | expression LE expression
   26           | expression '<' expression
   27           | '~' expression
   28           | expression '/' expression
   29           | expression '*' expression
   30           | expression '-' expression
   31           | expression '+' expression
   32           | ISVOID expression
   33           | NEW TYPEID
   34           | CASE expression OF Branches ESAC
   35           | LET letList
   36           | '{' expressionList '}'
   37           | WHILE expression LOOP expression POOL
   38           | IF expression THEN expression ELSE expression FI
   39           | OBJECTID '(' expressionListForDummies ')'
   40           | expression '.' OBJECTID '(' expressionListForDummies ')'
   41           | expression '@' TYPEID '.' OBJECTID '(' expressionListForDummies ')'
   42           | OBJECTID ASSIGN expression

   43 expressionListForDummies: %empty
   44                         | expression
   45                         | expressionListForDummies ',' expression

   46 expressionList: expression ';'
   47               | expressionList expression ';'
   48               | error ';'

   49 letList: OBJECTID ':' TYPEID IN expression
   50        | OBJECTID ':' TYPEID ASSIGN expression IN expression
   51        | OBJECTID ':' TYPEID ',' letList
   52        | OBJECTID ':' TYPEID ASSIGN expression ',' letList
   53        | error ','

   54 Branches: Branch
   55         | Branches Branch

   56 Branch: OBJECTID ':' TYPEID DARROW expression ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 12 22 39 40 41
    ')' (41) 12 22 39 40 41
    '*' (42) 29
    '+' (43) 31
    ',' (44) 17 45 51 52 53
    '-' (45) 30
    '.' (46) 40 41
    '/' (47) 28
    ':' (58) 10 11 12 14 49 50 51 52 56
    ';' (59) 4 5 6 10 11 12 13 46 47 48 56
    '<' (60) 26
    '=' (61) 24
    '@' (64) 41
    '{' (123) 4 5 12 36
    '}' (125) 4 5 12 36
    '~' (126) 27
    error (256) 6 13 48 53
    CLASS (258) 4 5
    ELSE (259) 38
    FI (260) 38
    IF (261) 38
    IN (262) 49 50
    INHERITS (263) 5
    LET (264) 35
    LOOP (265) 37
    POOL (266) 37
    THEN (267) 38
    WHILE (268) 37
    CASE (269) 34
    ESAC (270) 34
    OF (271) 34
    DARROW (272) 56
    NEW (273) 33
    ISVOID (274) 32
    STR_CONST <symbol> (275) 19
    INT_CONST <symbol> (276) 20
    BOOL_CONST <boolean> (277) 18
    TYPEID <symbol> (278) 4 5 10 11 12 14 33 41 49 50 51 52 56
    OBJECTID <symbol> (279) 10 11 12 14 21 39 40 41 42 49 50 51 52 56
    ASSIGN (280) 11 42 50 52
    NOT (281) 23
    LE (282) 25
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6
        on right: 2 3
    feature_list <features> (49)
        on left: 7 8 9
        on right: 4 5 9
    feature <feature> (50)
        on left: 10 11 12 13
        on right: 8 9
    formal <formal> (51)
        on left: 14
        on right: 16 17
    formal_List <formals> (52)
        on left: 15 16 17
        on right: 12 17
    expression <expression> (53)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
        on right: 11 12 22 23 24 25 26 27 28 29 30 31 32 34 37 38 40 41 42 44 45 46 47 49 50 52 56
    expressionListForDummies <expressions> (54)
        on left: 43 44 45
        on right: 39 40 41 45
    expressionList <expressions> (55)
        on left: 46 47 48
        on right: 36 47
    letList <expression> (56)
        on left: 49 50 51 52 53
        on right: 35 51 52
    Branches <cases> (57)
        on left: 54 55
        on right: 34 55
    Branch <case_> (58)
        on left: 56
        on right: 54 55


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    6 class: error . ';'

    ';'  shift, and go to state 6


State 2

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 7


State 3

    0 $accept: program . $end

    $end  shift, and go to state 8


State 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 9


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    6 class: error ';' .

    $default  reduce using rule 6 (class)


State 7

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


State 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 15
    feature       go to state 16


State 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 17


State 13

   13 feature: error . ';'

    ';'  shift, and go to state 18


State 14

   10 feature: OBJECTID . ':' TYPEID ';'
   11        | OBJECTID . ':' TYPEID ASSIGN expression ';'
   12        | OBJECTID . '(' formal_List ')' ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 19
    '('  shift, and go to state 20


State 15

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 21

    feature  go to state 22


State 16

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


State 17

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14

    error     [reduce using rule 7 (feature_list)]
    OBJECTID  [reduce using rule 7 (feature_list)]
    '}'       reduce using rule 7 (feature_list)

    feature_list  go to state 23
    feature       go to state 16


State 18

   13 feature: error ';' .

    $default  reduce using rule 13 (feature)


State 19

   10 feature: OBJECTID ':' . TYPEID ';'
   11        | OBJECTID ':' . TYPEID ASSIGN expression ';'

    TYPEID  shift, and go to state 24


State 20

   12 feature: OBJECTID '(' . formal_List ')' ':' TYPEID '{' expression '}' ';'

    OBJECTID  shift, and go to state 25

    $default  reduce using rule 15 (formal_List)

    formal       go to state 26
    formal_List  go to state 27


State 21

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 28


State 22

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


State 23

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    error     shift, and go to state 13
    OBJECTID  shift, and go to state 14
    '}'       shift, and go to state 29

    feature  go to state 22


State 24

   10 feature: OBJECTID ':' TYPEID . ';'
   11        | OBJECTID ':' TYPEID . ASSIGN expression ';'

    ASSIGN  shift, and go to state 30
    ';'     shift, and go to state 31


State 25

   14 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 32


State 26

   16 formal_List: formal .

    $default  reduce using rule 16 (formal_List)


State 27

   12 feature: OBJECTID '(' formal_List . ')' ':' TYPEID '{' expression '}' ';'
   17 formal_List: formal_List . ',' formal

    ')'  shift, and go to state 33
    ','  shift, and go to state 34


State 28

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


State 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 35


State 30

   11 feature: OBJECTID ':' TYPEID ASSIGN . expression ';'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 50


State 31

   10 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 10 (feature)


State 32

   14 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 51


State 33

   12 feature: OBJECTID '(' formal_List ')' . ':' TYPEID '{' expression '}' ';'

    ':'  shift, and go to state 52


State 34

   17 formal_List: formal_List ',' . formal

    OBJECTID  shift, and go to state 25

    formal  go to state 53


State 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


State 36

   38 expression: IF . expression THEN expression ELSE expression FI

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 54


State 37

   35 expression: LET . letList

    error     shift, and go to state 55
    OBJECTID  shift, and go to state 56

    letList  go to state 57


State 38

   37 expression: WHILE . expression LOOP expression POOL

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 58


State 39

   34 expression: CASE . expression OF Branches ESAC

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 59


State 40

   33 expression: NEW . TYPEID

    TYPEID  shift, and go to state 60


State 41

   32 expression: ISVOID . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 61


State 42

   19 expression: STR_CONST .

    $default  reduce using rule 19 (expression)


State 43

   20 expression: INT_CONST .

    $default  reduce using rule 20 (expression)


State 44

   18 expression: BOOL_CONST .

    $default  reduce using rule 18 (expression)


State 45

   21 expression: OBJECTID .
   39           | OBJECTID . '(' expressionListForDummies ')'
   42           | OBJECTID . ASSIGN expression

    ASSIGN  shift, and go to state 62
    '('     shift, and go to state 63

    $default  reduce using rule 21 (expression)


State 46

   23 expression: NOT . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 64


State 47

   27 expression: '~' . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 65


State 48

   36 expression: '{' . expressionList '}'

    error       shift, and go to state 66
    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression      go to state 67
    expressionList  go to state 68


State 49

   22 expression: '(' . expression ')'

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 69


State 50

   11 feature: OBJECTID ':' TYPEID ASSIGN expression . ';'
   24 expression: expression . '=' expression
   25           | expression . LE expression
   26           | expression . '<' expression
   28           | expression . '/' expression
   29           | expression . '*' expression
   30           | expression . '-' expression
   31           | expression . '+' expression
   40           | expression . '.' OBJECTID '(' expressionListForDummies ')'
   41           | expression . '@' TYPEID '.' OBJECTID '(' expressionListForDummies ')'

    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78
    ';'  shift, and go to state 79


State 51

   14 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 14 (formal)


State 52

   12 feature: OBJECTID '(' formal_List ')' ':' . TYPEID '{' expression '}' ';'

    TYPEID  shift, and go to state 80


State 53

   17 formal_List: formal_List ',' formal .

    $default  reduce using rule 17 (formal_List)


State 54

   24 expression: expression . '=' expression
   25           | expression . LE expression
   26           | expression . '<' expression
   28           | expression . '/' expression
   29           | expression . '*' expression
   30           | expression . '-' expression
   31           | expression . '+' expression
   38           | IF expression . THEN expression ELSE expression FI
   40           | expression . '.' OBJECTID '(' expressionListForDummies ')'
   41           | expression . '@' TYPEID '.' OBJECTID '(' expressionListForDummies ')'

    THEN  shift, and go to state 81
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


State 55

   53 letList: error . ','

    ','  shift, and go to state 82


State 56

   49 letList: OBJECTID . ':' TYPEID IN expression
   50        | OBJECTID . ':' TYPEID ASSIGN expression IN expression
   51        | OBJECTID . ':' TYPEID ',' letList
   52        | OBJECTID . ':' TYPEID ASSIGN expression ',' letList

    ':'  shift, and go to state 83


State 57

   35 expression: LET letList .

    $default  reduce using rule 35 (expression)


State 58

   24 expression: expression . '=' expression
   25           | expression . LE expression
   26           | expression . '<' expression
   28           | expression . '/' expression
   29           | expression . '*' expression
   30           | expression . '-' expression
   31           | expression . '+' expression
   37           | WHILE expression . LOOP expression POOL
   40           | expression . '.' OBJECTID '(' expressionListForDummies ')'
   41           | expression . '@' TYPEID '.' OBJECTID '(' expressionListForDummies ')'

    LOOP  shift, and go to state 84
    LE    shift, and go to state 70
    '<'   shift, and go to state 71
    '='   shift, and go to state 72
    '+'   shift, and go to state 73
    '-'   shift, and go to state 74
    '*'   shift, and go to state 75
    '/'   shift, and go to state 76
    '@'   shift, and go to state 77
    '.'   shift, and go to state 78


State 59

   24 expression: expression . '=' expression
   25           | expression . LE expression
   26           | expression . '<' expression
   28           | expression . '/' expression
   29           | expression . '*' expression
   30           | expression . '-' expression
   31           | expression . '+' expression
   34           | CASE expression . OF Branches ESAC
   40           | expression . '.' OBJECTID '(' expressionListForDummies ')'
   41           | expression . '@' TYPEID '.' OBJECTID '(' expressionListForDummies ')'

    OF   shift, and go to state 85
    LE   shift, and go to state 70
    '<'  shift, and go to state 71
    '='  shift, and go to state 72
    '+'  shift, and go to state 73
    '-'  shift, and go to state 74
    '*'  shift, and go to state 75
    '/'  shift, and go to state 76
    '@'  shift, and go to state 77
    '.'  shift, and go to state 78


State 60

   33 expression: NEW TYPEID .

    $default  reduce using rule 33 (expression)


State 61

   24 expression: expression . '=' expression
   25           | expression . LE expression
   26           | expression . '<' expression
   28           | expression . '/' expression
   29           | expression . '*' expression
   30           | expression . '-' expression
   31           | expression . '+' expression
   32           | ISVOID expression .
   40           | expression . '.' OBJECTID '(' expressionListForDummies ')'
   41           | expression . '@' TYPEID '.' OBJECTID '(' expressionListForDummies ')'

    '@'  shift, and go to state 77
    '.'  shift, and go to state 78

    $default  reduce using rule 32 (expression)


State 62

   42 expression: OBJECTID ASSIGN . expression

    IF          shift, and go to state 36
    LET         shift, and go to state 37
    WHILE       shift, and go to state 38
    CASE        shift, and go to state 39
    NEW         shift, and go to state 40
    ISVOID      shift, and go to state 41
    STR_CONST   shift, and go to state 42
    INT_CONST   shift, and go to state 43
    BOOL_CONST  shift, and go to state 44
    OBJECTID    shift, and go to state 45
    NOT         shift, and go to state 46
    '~'         shift, and go to state 47
    '{'         shift, and go to state 48
    '('         shift, and go to state 49

    expression  go to state 86


State 63

   39 expression: OBJECTID '(' . expressionListForDummies ')'
